examples/test/testpolicy1799.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1799
  namespace: namespace162
spec:
  podSelector:
    matchLabels:
      key7: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value16
      podSelector:
        matchLabels:
          key28: value38
          key30: value12
          key21: value18
